--- a/auto.html
+++ b/auto.html
@@ -51,7 +51,7 @@
             <li> Increase exports to 35-40% of the total output</li></ul></li></ol>
             </p>                  
             <div class="footer">
-                <p>Author: Prudhvi</p>
+                <p>Creator: Prudhvi</p>
             </div>
             
     </body>
