--- a/dada.html
+++ b/dada.html
@@ -63,7 +63,7 @@
     <p> Within three years, he had resigned on ethical grounds.</p>
     <p> In 1859, he established his own cotton trading company, Dadabhai Naoroji & Co. Later, he became Professor of Gujarati in University College London.</p>
     <div class="footer">
-        <p>Author: Prudhvi</p>
+        <p>Creator: Prudhvi</p>
     </div>
     
 </body>
