--- a/elec.html
+++ b/elec.html
@@ -57,7 +57,7 @@
             </ol>
             
             <div class="footer">
-                <p>Author: Prudhvi</p>
+                <p>Creator: Prudhvi</p>
             </div>
                         
         </p>
