--- a/gandhi.html
+++ b/gandhi.html
@@ -75,7 +75,7 @@
     <p>Beyond his religious beliefs, Gandhi stated another motivation for his experiments with diet.</p>
     <p>He attempted to find the most non-violent vegetarian meal that the poorest human could afford, taking meticulous notes on vegetables and fruits, and his observations with his own body and his ashram in Gujarat. </p>
     <div class="footer">
-        <p>Author: Prudhvi</p>
+        <p>Creator: Prudhvi</p>
     </div>
 </body>
 </html>
