--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <p>The Indian self-rule movement was a mass-based movement that encompassed various sections of society. It also underwent a process of constant ideological evolution.</p>
         <p>Although the underlying ideology of the campaign was anti-colonial, it was supported by a vision of independent capitalist economic development coupled with a secular, democratic, republican, and civil-libertarian political structure. </p>
     <div class="footer">
-        <p>Author: Prudhvi</p>
+        <p>Creator: Prudhvi</p>
     </div>
     
 </body>
