--- a/mki.html
+++ b/mki.html
@@ -52,7 +52,7 @@
         
     </p>
     <div class="footer">
-        <p>Author: Prudhvi</p>
+        <p>Creator: Prudhvi</p>
     </div>
     
     </body>
