--- a/ren.html
+++ b/ren.html
@@ -49,7 +49,7 @@
                 </ol>
             </p>
             <div class="footer">
-                <p>Author: Prudhvi</p>
+                <p>Creator: Prudhvi</p>
             </div>
     </body>
 </html>
