--- a/people.html
+++ b/people.html
@@ -62,7 +62,7 @@
     <p style="padding-bottom: 10px;">This date was chosen as on this date in 1905 the proclamation was made to commence the Swadeshi movement to avoid foreign goods and use only Indian-made products in order to rapidly improve the development of India.</p>
     <p style="font-size: large;"><b>Check out <a href="mki.html">Make In india</a> which is also a legacy of Swadeshi movement</b></p>
     <div class="footer">
-        <p>Author: Prudhvi</p>
+        <p>Creator: Prudhvi</p>
     </div>
     
 </body>
