--- a/bal.html
+++ b/bal.html
@@ -72,7 +72,7 @@
     <p>The project also had the objective of funding the reconstruction of the tomb (Samadhi) of Shivaji at Raigad Fort.</p>
     <p>For this second objective, Tilak established the Shri Shivaji Raigad Smarak Mandal along with Senapati Khanderao Dabhade II of Talegaon Dabhade, who became the founder President of the Mandal.</p>
     <div class="footer">
-        <p>Creator: Prudhvi</p>
+        <p>Creator:<a href="mailto: prudhvinallapuneni324@msitprogram.net" style="text-decoration: none;color: blue;"> Prudhvi</a></p>
     </div>
     
 </body>
