--- a/elec.html
+++ b/elec.html
@@ -57,7 +57,7 @@
             </ol>
             
             <div class="footer">
-                <p>Creator: Prudhvi</p>
+                <p>Creator:<a href="mailto: prudhvinallapuneni324@msitprogram.net" style="text-decoration: none;color: blue;"> Prudhvi</a></p>
             </div>
                         
         </p>
