--- a/gopal.html
+++ b/gopal.html
@@ -64,7 +64,7 @@
     <p>His contribution was monumental in shaping the Indian freedom struggle into a quest for building an open society and egalitarian nation.</p>
     <p>Gokhale's achievement must be studied in the context of predominant ideologies and social, economic and political situation at that time, particularly in reference to the famines, revenue policies, wars, partition of Bengal, Muslim League and the split in the Congress at Surat.</p>
     <div class="footer">
-        <p>Creator: Prudhvi</p>
+        <p>Creator:<a href="mailto: prudhvinallapuneni324@msitprogram.net" style="text-decoration: none;color: blue;"> Prudhvi</a></p>
     </div>
 </body>
 </html>
