--- a/auto.html
+++ b/auto.html
@@ -51,7 +51,7 @@
             <li> Increase exports to 35-40% of the total output</li></ul></li></ol>
             </p>                  
             <div class="footer">
-                <p>Creator: Prudhvi</p>
+                <p>Creator:<a href="mailto: prudhvinallapuneni324@msitprogram.net" style="text-decoration: none;color: blue;"> Prudhvi</a></p>
             </div>
             
     </body>
