--- a/food.html
+++ b/food.html
@@ -44,7 +44,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/xUhrL7Edt-A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding:10px;float: right;"></iframe>
     <img src="food.jpg" alt="food Proccessing" style="padding: 15px 50px 15px;">
     <div class="footer">
-        <p>Creator: Prudhvi</p>
+        <p>Creator:<a href="mailto: prudhvinallapuneni324@msitprogram.net" style="text-decoration: none;color: blue;"> Prudhvi</a></p>
     </div>
     
 </body>
