--- a/mki.html
+++ b/mki.html
@@ -52,7 +52,7 @@
         
     </p>
     <div class="footer">
-        <p>Creator: Prudhvi</p>
+        <p>Creator:<a href="mailto: prudhvinallapuneni324@msitprogram.net" style="text-decoration: none;color: blue;"> Prudhvi</a></p>
     </div>
     
     </body>
