--- a/pharma.html
+++ b/pharma.html
@@ -43,7 +43,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/jvWKs_TTGLI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="float: right; padding: 10px;"></iframe>
     <img src="pharma.jpg" alt="Pharmaceuticals" style="float: left; padding: 10px 30px 10px;">
     <div class="footer">
-        <p>Creator: Prudhvi</p>
+        <p>Creator:<a href="mailto: prudhvinallapuneni324@msitprogram.net" style="text-decoration: none;color: blue;"> Prudhvi</a></p>
     </div>
     </body>
 </html>
