--- a/gandhi.html
+++ b/gandhi.html
@@ -66,9 +66,8 @@
     <p>At age 57 he declared himself to be Advaitist Hindu in his religious persuasion, but added that he supported Dvaitist viewpoints and religious pluralism.</p>
     <p>In fact, it was the Swadeshi movement of 1905–1907 that resulted in the split within the Indian National Congress into the Moderates and the Extremists.</p>
     <p>Tilak was charged with incitement to murder and sentenced to 18 months imprisonment. When he emerged from prison in present-day Mumbai, he was revered as a martyr and a national hero.</p>
-    
-    <h3 style="font-size: 20px;">Society and other applications of is idea</h3><hr>
-    <p>Gandhi was brought up as a vegetarian by his devout Hindu mother.</p>
+    <h2>Society and other applications of his idea</h2><hr>
+    <p style="padding-top: 10px;">Gandhi was brought up as a vegetarian by his devout Hindu mother.</p>
     <p>The idea of vegetarianism is deeply ingrained in Hindu Vaishnavism and Jain traditions in India, such as in his native Gujarat, where meat is considered as a form of food obtained by violence to animals.</p>
     <p>Gandhi's rationale for vegetarianism was largely along those found in Hindu and Jain texts.</p>
     <p>Gandhi believed that any form of food inescapably harms some form of living organism, but one should seek to understand and reduce the violence in what one consumes because "there is essential unity of all life"</p>
